Change target hosts to localhost for post-login banner setup

--- a/playbooks/login-banner.yml
+++ b/playbooks/login-banner.yml
@@ -1,6 +1,6 @@
 ---
 - name: Set up post-login banner
-  hosts: all  # You can specify a group or individual hosts here
+  hosts: localhost  # You can specify a group or individual hosts here
   become: true  # Elevate privileges to root for writing to system files
 
   tasks:
